--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ag-grid-community": "^33.0.4",
+    "ag-grid-react": "^33.0.4",
     "axios": "^1.7.8",
     "formik": "^2.4.6",
     "react": "^18.3.1",
